k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-service
  labels:
    app: apigateway-service
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: apigateway-service
  template:
    metadata:
      labels:
        app: apigateway-service
    spec:
      containers:
        - name: apigateway-service
          image: apigateway-service:1.0
          imagePullPolicy: IfNotPresent
          #Makes Kubernetes wait 5 seconds before sending the SIGTERM signal to the Pod by that Kubernetes will update its components to not to send new requests to the pod.( sleep is to avoid race condition)
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5"]
          ports:
            - containerPort: 8081
