k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
  labels:
    app: apigateway-service
spec:
  type: ClusterIP
  selector:
    app: apigateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
